# projeto-whats1-replit

./: CONFIGURACAO_WEBHOOK_TWILIO.md  DEPLOY_GUIDE.md  DEPLOY_GUIDE_OPTIMIZED.md  Dockerfile  GUIA_MOBILE.md  README.md  README_COMPLETO (copy).md  README_RAG.md  SISTEMA_REALTIME_COMPLETO.md  SOLUÇÃO_DEFINITIVA.md  TESTE_FINAL.md  advanced_memory_system.py  advanced_realtime_client.py  advanced_whatsapp_handler.py  advanced_whatsapp_realtime_handler.py  app_old.py  config.py  diagnostic_system.py  diagnostics.sh  elevenlabs_service.py  knowledge_base_manager.py  main.py  main_backup_v1.py  main_old.py  models.py  openai_service.py  optimized_pipeline.py  personality_manager.py  pyproject.toml  quick_test_realtime.py  realtime_audio_handler.py  realtime_audio_processor.py  realtime_endrigo_clone.py  replit.md  run_corrected.py  simple_audio_handler.py  simple_webhook_handler.py  start_optimized.py  start_server.py  test_audio_realtime.py  (+7 more)
_diag_20250803_182221/: summary.txt
_diag_20250803_182252/: SUMMARY.md
app/: __init__.py  functions.py  models.py  routes.py  services.py
attached_assets/: Pasted--ISSO-O-erro-final-claro-como-a-luz-do-dia-O-log-nos-deu-a-resposta-exata-e-um-erro-de-progr-1754136882228_1754136882229.txt  Pasted--O-Plano-de-A-o-Definitivo-Seguran-a-Funcionalidade-Vamos-implementar-as-recomenda-es-cr-ticas-1754146974962_1754146974963.txt  Pasted--main-py-Clone-Digital-do-Endrigo-no-Replit-Vers-o-Corrigida-e-Fluida-import-logging-import-os--1754015315468_1754015315469.txt  (+27 more)
documents/: biografia_endrigo_completa.txt
static/: style.css
(+21 files in other folders)
