[tool.poetry]
name = "segundo-cerebro-pro"
version = "1.0.0"
description = "Clone Digital do Endrigo Almada com IA"
authors = ["Endrigo Almada"]
# --- CORREÇÃO CRÍTICA ABAIXO ---
# Esta linha diz ao sistema onde encontrar o código-fonte da sua aplicação.
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^22.0.0"
requests = "^2.31.0"
twilio = "^9.0.0"
openai = ">=1.23.0"  # Versão importante para Assistants v2
elevenlabs = "^1.0.0"
python-dotenv = "^1.0.0"
google-cloud-storage = "^2.16.0"
pytz = "^2024.1"
# Dependências que adicionamos para o RAG semântico
pandas = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
